assertions moved into variables
