# docs/swagger.json
@@ -349,9 +349,6 @@
                 },
                 "value": {
                     "type": "string"
-                },
-                "variable_name": {
-                    "type": "string"
                 }
             }
         },
@@ -439,12 +436,6 @@
         "model.Rule": {
             "type": "object",
             "properties": {
-                "assertions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Assertion"
-                    }
-                },
                 "group": {
                     "type": "string",
                     "example": "payments"
@@ -513,6 +504,12 @@
         "model.Variable": {
             "type": "object",
             "properties": {
+                "assertions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Assertion"
+                    }
+                },
                 "key": {
                     "type": "string",
                     "example": "$.nickname"
